# tauri2-deno-starter

./: .gitignore  LICENSE  README.md  deno.json
app/: deno.json  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
plugins/tauri-plugin-ping/: Cargo.toml  README.md  deno.json
plugins/tauri-plugin-ping/examples/tauri-app/: deno.json  vite.config.ts
plugins/tauri-plugin-ping/examples/tauri-app/src/: App.css  App.tsx
plugins/tauri-plugin-ping/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
plugins/tauri-plugin-ping/examples/tauri-app/src-tauri/capabilities/: default.json
plugins/tauri-plugin-ping/examples/tauri-app/src-tauri/src/: lib.rs
plugins/tauri-plugin-ping/guest-js/: index.ts
plugins/tauri-plugin-ping/permissions/autogenerated/: reference.md
plugins/tauri-plugin-ping/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
